Added tex files for all modules and updated ToC to reflect this

--- a/studyguide.tex
+++ b/studyguide.tex
@@ -63,4 +63,22 @@
 
 \chapter{Graphics}
 \subfile{modules/graphics}
+\chapter{Computational Vision}
+\subfile{modules/vision}
+\chapter{Models of Computation}
+\subfile{modules/models}
+\chapter{Introductory Databases}
+\subfile{modules/databases}
+\chapter{Computer Systems \& Architecture}
+\subfile{modules/csa}
+\chapter{C/C++}
+\subfile{modules/c}
+\chapter{Mathematical Techniques for Computer Science}
+\subfile{modules/maths}
+\chapter{Introduction to Computer Security}
+\subfile{modules/security}
+\chapter{Professional Computing}
+\subfile{modules/pc}
+\chapter{Functional Programming}
+\subfile{modules/functional}
 \end{document}
