Completed notes on Graphics - Surfaces

--- a/studyguide.tex
+++ b/studyguide.tex
@@ -8,7 +8,14 @@
 \usepackage{float}
 \usepackage[headsep=0mm]{geometry}
 \usepackage{enumitem}
+\usepackage{hyperref}
 
+\hypersetup{
+	colorlinks=true,
+	linkcolor=black,
+	filecolor=magenta,      
+	urlcolor=cyan,
+}
 \setlength{\parindent}{0pt}
 \setlength{\headsep}{0pt}
 \setlength{\parskip}{0pt}
