Updated logo, committed images needed for previous commit

--- a/studyguide.tex
+++ b/studyguide.tex
@@ -42,7 +42,6 @@
 		%----------------------------------------------------------------------------------------
 		
 		\textsc{\LARGE University of Birmingham}\\[1.5cm] % Name of your university/college
-		%\includegraphics[scale=1.25]{logo.png}\\[1cm]
 		\textsc{\Large Computer Science Year 2}\\[0.5cm] % Major heading such as course name
 		\textsc{\Large Faisal IMH Alrajhi}\\[0.5cm]
 		
@@ -55,7 +54,7 @@
 		\HRule \\[1.5cm]
 		
 		
-	%	\includegraphics[scale=0.4]{title.png}\\[1cm] % Include a department/university logo - this will require the graphicx package
+		\includegraphics[scale=0.75]{logo.png}\\[1cm] % Include a department/university logo - this will require the graphicx package
 		
 		%----------------------------------------------------------------------------------------
 		
