--- a/studyguide.tex
+++ b/studyguide.tex
@@ -9,6 +9,7 @@
 \usepackage[headsep=0mm]{geometry}
 \usepackage{enumitem}
 \usepackage{hyperref}
+\usepackage[framed,numbered,autolinebreaks,useliterate]{mcode}
 
 \hypersetup{
 	colorlinks=true,
