Fixed section label error

--- a/modules/graphics.tex
+++ b/modules/graphics.tex
@@ -603,7 +603,7 @@ P_{per} = \begin{bmatrix}
 Converting to homogenous would also be slightly different, but will still be fairly simple.
 All Z coordinates should end up at Z=0.
 
-\section{Examples}
+\subsection{Examples}
 
 The questions here are from the quiz.
 
